--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,12 @@ server:
   port: 8087
 
 spring:
-
+  application:
+    name: ead-authuser-service
   datasource:
     url: jdbc:postgresql://localhost:5433/ead-authuser
     username: postgres
     password: 123456
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,7 +17,6 @@ spring:
     properties:
       hibernate:
         show_sql: true
-
   output:
     ansi:
       enabled: always
@@ -32,4 +31,11 @@ logging:
 ead:
   api:
     url:
-      course: 'http://localhost:8082'
+      course: 'http://ead-course-service'
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: 'http://localhost:8761/eureka'
+  instance:
+    hostname: localhost
