--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,6 +22,8 @@ spring:
   output:
     ansi:
       enabled: always
+  rabbitmq:
+    addresses: amqps://uwkbdeas:0QhCNUCvbbiSwuXmw4buwvkd-cHtcpGC@shrimp.rmq.cloudamqp.com/uwkbdeas
 
 logging:
   level:
@@ -34,6 +36,9 @@ ead:
   api:
     url:
       course: 'http://ead-course-service/ead-course'
+  broker:
+    exchange:
+      userEvent: ead.userevent
 
 eureka:
   client:
