insert dev properties

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,73 +1,5 @@
 spring:
+  profiles:
+    active: dev
   application:
     name: ead-authuser-service
-  config:
-    import: 'configserver:'
-  cloud: # necessary due to service has name with hyphens
-    config:
-      discovery:
-        serviceId: ead-config-server
-      username: configserver
-      password: 'ead123cs'
-#server:
-#  port: 8087
-#  servlet:
-#    context-path: '/ead-authuser/'
-#
-#  datasource:
-#    url: jdbc:postgresql://localhost:5433/ead-authuser
-#    username: postgres
-#    password: 123456
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#      dialect: org.hibernate.dialect.PostgreSQLDialect
-#      jdbc:
-#        lob.non-contextual-creaction: true
-#    properties:
-#      hibernate:
-#        show_sql: true
-#  output:
-#    ansi:
-#      enabled: always
-#  rabbitmq:
-#    addresses: amqps://uwkbdeas:0QhCNUCvbbiSwuXmw4buwvkd-cHtcpGC@shrimp.rmq.cloudamqp.com/uwkbdeas
-#
-#logging:
-#  level:
-#    root: info
-#    org.springframework.web: debug
-#    org.hibernate: info
-#    com.ead: trace
-#
-#ead:
-#  api:
-#    url:
-#      course: 'http://ead-course-service/ead-course'
-#  broker:
-#    exchange:
-#      userEvent: ead.userevent
-#
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: 'http://localhost:8761/eureka'
-#  instance:
-#    hostname: localhost
-#
-#resilience4j:
-#  circuitbreaker:
-#    instances:
-#      circuitbreakerInstance:
-#        # try 2 calls 30sec to activate open state
-#        slidingWindowSize: 30
-#        permittedNumberOfCallsInHalfOpenState: 2
-#        slidingWindowType: TIME_BASED
-#        minimumNumberOfCalls: 2
-#        waitDurationInOpenState: 30s
-#        failureRateThreshold: 80
-#  retry:
-#    instances:
-#      retryInstance:
-#        maxAttempts: 3
-#        waitDuration: 5s
